src/openpam.rs

pub const PAM_LOG_LIBDEBUG: _bindgen_ty_6 = -1;
pub const PAM_LOG_DEBUG: _bindgen_ty_6 = 0;
pub const PAM_LOG_VERBOSE: _bindgen_ty_6 = 1;
pub const PAM_LOG_NOTICE: _bindgen_ty_6 = 2;
pub const PAM_LOG_ERROR: _bindgen_ty_6 = 3;
pub type _bindgen_ty_6 = libc::c_int;
extern "C" {
    pub fn openpam_ttyconv(
        _n: libc::c_int,
        _msg: *mut *const pam_message,
        _resp: *mut *mut pam_response,
        _data: *mut libc::c_void,
    ) -> libc::c_int;
}
extern "C" {
    pub fn openpam_nullconv(
        _n: libc::c_int,
        _msg: *mut *const pam_message,
        _resp: *mut *mut pam_response,
        _data: *mut libc::c_void,
    ) -> libc::c_int;
}
pub const PAM_SM_AUTHENTICATE: _bindgen_ty_7 = 0;
pub const PAM_SM_SETCRED: _bindgen_ty_7 = 1;
pub const PAM_SM_ACCT_MGMT: _bindgen_ty_7 = 2;
pub const PAM_SM_OPEN_SESSION: _bindgen_ty_7 = 3;
pub const PAM_SM_CLOSE_SESSION: _bindgen_ty_7 = 4;
pub const PAM_SM_CHAUTHTOK: _bindgen_ty_7 = 5;
pub const PAM_NUM_PRIMITIVES: _bindgen_ty_7 = 6;
pub type _bindgen_ty_7 = libc::c_uint;
extern "C" {
    pub fn pam_sm_acct_mgmt(
        _pamh: *mut pam_handle_t,
        _flags: libc::c_int,
        _argc: libc::c_int,
        _argv: *mut *const libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn pam_sm_authenticate(
        _pamh: *mut pam_handle_t,
        _flags: libc::c_int,
        _argc: libc::c_int,
        _argv: *mut *const libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn pam_sm_chauthtok(
        _pamh: *mut pam_handle_t,
        _flags: libc::c_int,
        _argc: libc::c_int,
        _argv: *mut *const libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn pam_sm_close_session(
        _pamh: *mut pam_handle_t,
        _flags: libc::c_int,
        _args: libc::c_int,
        _argv: *mut *const libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn pam_sm_open_session(
        _pamh: *mut pam_handle_t,
        _flags: libc::c_int,
        _argc: libc::c_int,
        _argv: *mut *const libc::c_char,
    ) -> libc::c_int;
}
extern "C" {
    pub fn pam_sm_setcred(
        _pamh: *mut pam_handle_t,
        _flags: libc::c_int,
        _argc: libc::c_int,
        _argv: *mut *const libc::c_char,
    ) -> libc::c_int;
}
